ajustes editar y eliminar negocios

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,2 +1,4 @@
-@import '~@fullcalendar/core/main.css';
-@import '~@fullcalendar/daygrid/main.css';
+@import url('https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/main.min.css');
+@import url('https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/daygrid.min.css');
+
+
