--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
@@ -1,157 +1,186 @@
-<form
-  [formGroup]="negocioForm"
-  (ngSubmit)="onSubmit()"
-  class="space-y-6 bg-gray-900 text-white p-6 rounded-lg shadow-lg max-w-2xl mx-auto"
->
-  <!-- Nombre -->
-  <div>
-    <label for="nombre" class="block text-sm font-medium mb-1">Nombre</label>
-    <input
-      id="nombre"
-      formControlName="nombre"
-      type="text"
-      class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Nombre del negocio"
-    />
-  </div>
+<div class="space-y-6">
+  @if(!editando && !agregando){
+  <button (click)="agregarNegocio()" class="btn-agregar bg-teal-400">
+    Agregar nuevo negocio
+  </button>
+  } @if (mostrarFormulario) {
+  <form
+    [formGroup]="negocioForm"
+    (ngSubmit)="agregarNegocio()"
+    class="space-y-4 bg-white text-black p-4 rounded-lg shadow-lg max-w-2xl mx-auto"
+  >
+    <!-- Nombre -->
+    <div>
+      <label for="nombre" class="block text-sm font-medium mb-1">Nombre</label>
+      <input
+        id="nombre"
+        formControlName="nombre"
+        type="text"
+        placeholder="Nombre del negocio"
+      />
+    </div>
 
-  <!-- Descripción -->
-  <div>
-    <label for="descripcion" class="block text-sm font-medium mb-1">Descripción</label>
-    <input
-      id="descripcion"
-      formControlName="descripcion"
-      type="text"
-      class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Breve descripción"
-    />
-  </div>
+    <!-- Descripción -->
+    <div>
+      <label for="descripcion" class="block text-sm font-medium mb-1"
+        >Descripción</label
+      >
+      <input
+        id="descripcion"
+        formControlName="descripcion"
+        type="text"
+        placeholder="Breve descripción"
+      />
+    </div>
 
-  <!-- Dirección -->
-  <div>
-    <label for="direccion" class="block text-sm font-medium mb-1">Dirección</label>
-    <input
-      id="direccion"
-      formControlName="direccion"
-      type="text"
-      class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Dirección del negocio"
-    />
-  </div>
+    <!-- Dirección -->
+    <div>
+      <label for="direccion" class="block text-sm font-medium mb-1"
+        >Dirección</label
+      >
+      <input
+        id="direccion"
+        formControlName="direccion"
+        type="text"
+        placeholder="Dirección del negocio"
+      />
+    </div>
 
     <!-- Latitud -->
     <div>
-      <label for="latitud" class="block text-sm font-medium mb-1">Latitud</label>
+      <label for="latitud" class="block text-sm font-medium mb-1"
+        >Latitud</label
+      >
       <input
         id="latitud"
         formControlName="latitud"
         type="text"
-        class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
         placeholder="Latitud"
       />
     </div>
-  
+
     <!-- Longitud -->
     <div>
-      <label for="longitud" class="block text-sm font-medium mb-1">Longitud</label>
+      <label for="longitud" class="block text-sm font-medium mb-1"
+        >Longitud</label
+      >
       <input
         id="longitud"
         formControlName="longitud"
         type="text"
-        class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
         placeholder="Longitud"
       />
     </div>
 
-  <!-- Redes Sociales -->
-  <div>
-    <label for="tipoRedSocial" class="block text-sm font-medium mb-1">Redes Sociales</label>
-    <div class="flex items-center gap-4">
-      <!-- Selección de Red Social -->
-      <select
-        id="redSocial"
-        formControlName="tipoRedSocial"
-        class="bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+    <!-- Redes Sociales -->
+    <div>
+      <label for="tipoRedSocial" class="block text-sm font-medium mb-1"
+        >Redes Sociales</label
       >
-        <option value="" disabled selected>Selecciona una red social</option>
-        <option value="instagram">Instagram</option>
-        <option value="pagina_web">Página Web</option>
-        <option value="twitter">Twitter</option>
-        <option value="facebook">Facebook</option>
-        <option value="youtube">YouTube</option>
-      </select>
+      <div class="flex items-center gap-4">
+        <!-- Selección de Red Social -->
+        <select
+          id="redSocial"
+          formControlName="tipoRedSocial"
+          class="bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+        >
+          <option value="" disabled selected>Selecciona una red social</option>
+          <option value="instagram">Instagram</option>
+          <option value="pagina_web">Página Web</option>
+          <option value="twitter">Twitter</option>
+          <option value="facebook">Facebook</option>
+          <option value="youtube">YouTube</option>
+        </select>
 
-      <!-- Enlace de la Red Social -->
+        <!-- Enlace de la Red Social -->
+        <input
+          id="urlRedSocial"
+          formControlName="urlRedSocial"
+          type="text"
+          class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
+          placeholder="URL de la red social"
+        />
+      </div>
+    </div>
+
+    <!-- Categoría -->
+    <div>
+      <label for="categoria" class="block text-sm font-medium mb-1"
+        >Categoría</label
+      >
       <input
-        id="urlRedSocial"
-        formControlName="urlRedSocial"
+        id="categoria"
+        formControlName="categoria"
         type="text"
-        class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-        placeholder="URL de la red social"
+        placeholder="Categoría del negocio"
       />
     </div>
-  </div>
 
-  <!-- Categoría -->
-  <div>
-    <label for="categoria" class="block text-sm font-medium mb-1">Categoría</label>
-    <input
-      id="categoria"
-      formControlName="categoria"
-      type="text"
-      class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
-      placeholder="Categoría del negocio"
-    />
-  </div>
-
-  <!-- Botón Guardar -->
-  <button
-    type="submit"
-    [disabled]="negocioForm.invalid"
-    class="bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600 focus:ring-2 focus:ring-teal-500 w-full"
-  >
-    Guardar
-  </button>
-</form>
-
-@if(tipoRedSocial && urlRedSocial) {
-<div class="mt-6">
-  <h3 class="text-lg font-semibold mb-2">Vista previa:</h3>
-  <div class="flex items-center gap-4">
-    <!-- Ícono según la red social -->
-    @if(tipoRedSocial === 'instagram') {
-      <i class="fab fa-instagram text-pink-500 text-2xl"></i>
-  }
-
-    @if(tipoRedSocial === 'twitter') {
-      <i class="fab fa-twitter text-blue-400 text-2xl"
-    ></i>
-  }
-
-    @if(tipoRedSocial === 'facebook') {
-    <i
-      class="fab fa-facebook text-blue-600 text-2xl"
-    ></i>
-  }
-    @if(tipoRedSocial ==='youtube') {
-    <i
-      class="fab fa-youtube text-red-500 text-2xl"
-    ></i>
-  } 
-    @if(tipoRedSocial === 'pagina_web') {
-     <i
-      class="fas fa-globe text-green-500 text-2xl"
-    ></i>
-  }
-
-    <!-- Enlace -->
-    <a
-      [href]="urlRedSocial"
-      target="_blank"
-      class="text-blue-400 underline"
+    <!-- Botón Guardar -->
+    <button
+      type="submit"
+      class="bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600 focus:ring-2 focus:ring-teal-500 w-full"
     >
-      {{ urlRedSocial }}
-    </a>
+      Guardar
+    </button>
+  </form>
+  }
+
+  <div class="space-y-4 mt-8">
+    @if(!editando && !agregando){
+    <h2 class="text-2xl font-semibold text-center">Lista de Negocios</h2>
+    @if(negocios && negocios.length > 0) {
+    <div
+      class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
+    >
+      @for(negocio of negocios; track negocio.id_negocio) {
+      <div class="card">
+        <h3 class="font-semibold text-lg">{{ negocio.nombre }}</h3>
+        <p class="text-sm text-gray-400">{{ negocio.descripcion }}</p>
+        <p class="text-sm text-gray-400">{{ negocio.direccion }}</p>
+        <p class="text-sm text-gray-400">{{ negocio.categoria }}</p>
+
+        <!-- Red social con su ícono -->
+        <div class="mt-2 flex items-center gap-4">
+          @if(negocio.tipoRedSocial === 'instagram') {
+          <i class="fab fa-instagram text-pink-500 text-xl"></i>
+          } @if(negocio.tipoRedSocial === 'twitter') {
+          <i class="fab fa-twitter text-blue-400 text-xl"></i>
+          } @if(negocio.tipoRedSocial === 'facebook') {
+          <i class="fab fa-facebook text-blue-600 text-xl"></i>
+          } @if(negocio.tipoRedSocial === 'youtube') {
+          <i class="fab fa-youtube text-red-500 text-xl"></i>
+          } @if(negocio.tipoRedSocial === 'pagina_web') {
+          <i class="fas fa-globe text-green-500 text-xl"></i>
+          }
+
+          <a
+            [href]="negocio.urlRedSocial"
+            target="_blank"
+            class="text-blue-400 underline"
+          >
+            {{ negocio.urlRedSocial }}
+          </a>
+        </div>
+        <div class="mt-4 flex gap-4">
+          <button
+            (click)="editarNegocio(negocio)"
+            class="btn-negocios bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600"
+          >
+            Editar
+          </button>
+          <button
+            (click)="onDelete(negocio.id_negocio)"
+            class="btn-negocios bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
+          >
+            Eliminar
+          </button>
+        </div>
+      </div>
+      }
+    </div>
+    } @else {
+    <div class="text-center text-gray-500">No hay negocios disponibles.</div>
+    } }
   </div>
 </div>
-}
