--- a/src/app/componentes/admin/eventos-admin/eventos-admin.component.html
+++ b/src/app/componentes/admin/eventos-admin/eventos-admin.component.html
@@ -4,13 +4,13 @@
 }
   @if (mostrarFormularioEvento) {
   <form  [formGroup]="eventoForm" class="space-y-6" (ngSubmit)="agregarEvento()">
-    <!-- Title -->
+    <!-- titulo -->
     <div>
-      <label class="block text-sm font-medium mb-1" for="title">Titulo</label>
+      <label class="block text-sm font-medium mb-1" for="titulo">Titulo</label>
       <input
         type="text"
-        id="title"
-        formControlName="title"
+        id="titulo"
+        formControlName="titulo"
         class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
         required      
         />
@@ -19,7 +19,7 @@
     <!-- Selector de fechas -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
       <div>
-        <label class="block text-sm font-medium mb-1" for="fecha">Fecha</label>
+        <label class="block text-sm font-medium mb-1" for="fecha">Fecha inicio</label>
         <input
           type="date"
           id="fecha"
@@ -29,6 +29,7 @@
           />
       </div>
       <div>
+        <label class="block text-sm font-medium mb-1" for="fecha_fin">Fecha fin</label>
         <input
           type="date"
           id="fecha_fin"
@@ -75,15 +76,15 @@
     <button class="w-6 h-6 rounded-full bg-red-500" type="button" (click)="setColor('red')"></button>
   </div>    
       <!-- Campo oculto para almacenar el color seleccionado -->
-      <input type="hidden" id="color" name="color" value="" />
+      <input type="hidden" id="color" formControlName="color"/>
     </div>
 
     <!-- Description -->
     <div>
-      <label class="block text-sm font-medium mb-1" for="description">Descripción</label>
+      <label class="block text-sm font-medium mb-1" for="descripcion">Descripción</label>
       <textarea
-        id="description"
-        formControlName="description"
+        id="descripcion"
+        formControlName="descripcion"
         class="w-full bg-gray-800 border border-gray-700 rounded-md p-2 text-white focus:outline-none focus:ring-2 focus:ring-blue-500"
         rows="4"
         required
@@ -104,7 +105,7 @@
     </div>
 
       <!-- Costo -->
-       @if (evento.entrada === 'Pago'){
+       @if (eventoForm.get('entrada')?.value === 'Pago'){
     <div>
       <label class="block text-sm font-medium mb-1" for="precio">Precio</label>
       <input
@@ -145,7 +146,7 @@
     class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6"
   >
     @for(evento of eventos; track evento.id_evento) {
-    <div class="card">
+    <div class="card" [class]="evento.color">
       <h3 class="font-semibold text-lg">{{ evento.titulo }}</h3>
       <p class="text-sm text-gray-400">{{ evento.descripcion }}</p>
       <p class="text-sm text-gray-400">{{ evento.fecha }}</p>
@@ -156,13 +157,13 @@
       <div class="mt-4 flex gap-4">
         <button
           (click)="editarEvento(evento)"
-          class="btn-eventos bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600"
+          class="btn-eventos bg-teal-400 text-white hover:text-black px-4 py-2 rounded-md hover:bg-teal-600"
         >
           Editar
         </button>
         <button
           (click)="eliminarEvento(evento)"
-          class="btn-eventos bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
+          class="btn-eventos bg-black text-white hover:text-black px-4 py-2 rounded-md"
         >
           Eliminar
         </button>
