--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
@@ -165,15 +165,17 @@
         <div class="mt-4 flex gap-4">
           <button
             (click)="editarNegocio(negocio)"
-            class="btn-negocios bg-teal-400 text-white px-4 py-2 rounded-md hover:bg-teal-600"
-          >
+            class="btn-negocios btn-9 bg-teal-400 text-white hover:text-black px-4 py-2 rounded-md hover:bg-teal-600"
+          ><span>
             Editar
+          </span>
           </button>
           <button
             (click)="onDelete(negocio.id_negocio)"
-            class="btn-negocios bg-red-500 text-white px-4 py-2 rounded-md hover:bg-red-600"
-          >
+            class="btn-negocios btn-9 bg-black text-white hover:text-black px-4 py-2 rounded-md hover:bg-gray-800"
+          ><span>
             Eliminar
+          </span>
           </button>
         </div>
       </div>
