--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.scss
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.scss
@@ -52,18 +52,12 @@ body {
     transition: background-color 0.3s ease;
   }
   .btn-negocios {
-    background-color: #38b2ac;
-    color: white;
     padding: 0.75rem 1.5rem;
     border-radius: 0.375rem;
     cursor: pointer;
     width: 100%;
     font-size: 1rem;
     transition: background-color 0.3s ease;
-  
-    &:hover {
-      background-color: #319795;
-    }
   }
   
   button:disabled {
@@ -79,6 +73,9 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin: 10px 0;
     transition: background-color 0.3s, box-shadow 0.3s;
+    word-break: break-word;
+    overflow-wrap: break-word;
+    display: block;
   }
  
   body.dark .card {
@@ -88,31 +85,88 @@ body {
   }
   
   .card button {
-    background-color: #f6ad55;
-    color: white;
     padding: 0.5rem 1rem;
     border-radius: 0.375rem;
     margin-right: 1rem;
     transition: background-color 0.3s ease;
-  }
-  
-  .card button:hover {
-    background-color: #fbd38d;
-  }
-  
-  .card button.bg-blue-500 {
-    background-color: #3182ce;
-  }
-  
-  .card button.bg-red-500 {
-    background-color: #e53e3e;
-  }
-  
-  .card button:hover.bg-blue-500 {
-    background-color: #2b6cb0;
-  }
-  
-  .card button:hover.bg-red-500 {
-    background-color: #c53030;
-  }
-  
+  }  
+  .btn-9,
+.btn-9 *,
+.btn-9 :after,
+.btn-9 :before,
+.btn-9:after,
+.btn-9:before {
+  border: 0 solid;
+  box-sizing: border-box;
+}
+.btn-9 {
+  -webkit-tap-highlight-color: transparent;
+  appearance: button;
+  background-image: none;
+  cursor: pointer;
+  line-height: 1.5;
+  margin: 0;
+  mask-image: radial-gradient(#000, #fff);
+  padding: 0;
+  text-transform: uppercase;
+}
+.btn-9:disabled {
+  cursor: default;
+}
+.btn-9:-moz-focusring {
+  outline: auto;
+}
+.btn-9 svg {
+  display: block;
+  margin: auto;
+}
+.btn-9 [hidden] {
+  display: none;
+}
+.btn-9 {
+  border-radius: 99rem;
+  border-width: 2px;
+  overflow: hidden;
+  padding: 0.8rem 3rem;
+  position: relative;
+}
+
+.btn-9:after,
+.btn-9:before {
+  --tilt: 1.2rem;
+  background: #fff;
+  -webkit-clip-path: polygon(
+    0 0,
+    calc(100% - var(--tilt)) 0,
+    100% 50%,
+    calc(100% - var(--tilt)) 100%,
+    0 100%
+  );
+  clip-path: polygon(
+    0 0,
+    calc(100% - var(--tilt)) 0,
+    100% 50%,
+    calc(100% - var(--tilt)) 100%,
+    0 100%
+  );
+  content: "";
+  display: block;
+  height: 100%;
+  left: calc(-100% - var(--tilt));
+  position: absolute;
+  top: 0;
+  transform: translateX(var(--progress, 0));
+  transition: transform 0.2s ease;
+  width: calc(100% + var(--tilt));
+}
+.btn-9:after {
+  left: 100%;
+  transform: translateX(var(--progress, 0)) rotate(180deg);
+  z-index: -1;
+}
+.btn-9:hover:before {
+  --progress: 100%;
+}
+.btn-9:hover:after {
+  --progress: -100%;
+}
