--- a/src/app/componentes/mapa/mapa.component.scss
+++ b/src/app/componentes/mapa/mapa.component.scss
@@ -4,37 +4,48 @@ html, body {
   overflow: hidden;
   height: 100%;
 }
+#map {
+  position: relative !important;
+  z-index: 1;
+}
+
+.filtro {
+  position: absolute !important;
+  top: 1rem;
+  right: 1rem;
+  z-index: 9999 !important;
+  max-width: 250px; 
+  background-color: white;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
 
 .map-container {
   display: flex;
   height: 100%;
 }
 
-.card-container {
-  flex: 1;
-  overflow-y: auto;
-  max-height: 100%;
-  padding: 20px;
-  background-color: #f9f9f9;
-}
-
-.card {
-  margin: 0;
-  padding: 10px;
-  border: 1px solid #ddd;
-  border-radius: 8px;
-}
-
-.card h3 {
-  margin: 0;
-}
-
-.card p {
-  font-size: 14px;
-}
-
 .leaflet-div-icon,
 .leaflet-marker-icon {
   background: transparent !important;
   border: none !important;
+}
+.card a {
+  color: #3498db;
+  text-decoration: underline;
+  word-break: break-word;
+  overflow-wrap: break-word;
+  display: block;
+  margin-top: 0.5rem;
+}
+.card.bg-gray-100 {
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  transform: scale(1.02);
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+}
+.card-modal {
+  word-break: break-word;
+  overflow-wrap: break-word;
+  display: block;
 }
