--- a/src/app/componentes/calendario/calendario.component.html
+++ b/src/app/componentes/calendario/calendario.component.html
@@ -1,3 +1,49 @@
   <full-calendar
 [options]="calendarOptions">
 </full-calendar>
+
+@if (eventoSeleccionado) {
+  <div class="modal-overlay">
+
+    <div class="modal-content">
+      <div class="card-modal">
+        <h2 class="text-xl font-bold text-gray-800 mb-4">{{ eventoSeleccionado.titulo }}</h2>
+        <p class="text-gray-600 mb-2">{{ eventoSeleccionado.descripcion }}</p>
+        <p class="text-sm text-gray-500 mb-2">
+          <strong>Fecha:</strong> {{ eventoSeleccionado.fecha }} 
+          @if (eventoSeleccionado.fecha_fin) {
+          <span>{{ eventoSeleccionado.fecha_fin }}</span>
+        }
+        </p>
+        <p class="text-sm text-gray-500 mb-2">
+          <strong>Hora:</strong> {{ eventoSeleccionado.hora_inicio }}
+          @if (eventoSeleccionado.hora_fin) {
+            <span>{{ eventoSeleccionado.hora_fin }}</span>
+          }
+        </p>
+        <p class="text-sm text-gray-500 mb-2">
+          <strong>Ubicación:</strong> {{ eventoSeleccionado.ubicacion }}
+        </p>
+
+        @if (eventoSeleccionado.entrada) {
+          <p class="text-sm text-gray-500">
+            <strong>Entrada:</strong> {{ eventoSeleccionado.entrada }}
+          </p>
+        }
+        @if (eventoSeleccionado.precio) {
+          <p class="text-sm text-gray-500">
+            <strong>Precio:</strong> {{ eventoSeleccionado.precio | currency }}
+          </p>
+        }
+      </div>
+  
+      <!-- Botón de cierre -->
+      <button
+        (click)="cerrarModal()"
+        class="mt-6 w-full bg-teal-500 text-white py-2 px-4 rounded-lg hover:bg-teal-600 transition"
+      >
+        Cerrar
+      </button>
+    </div>
+  </div>
+}
