--- a/src/app/componentes/admin/blog-admin/blog-admin.component.html
+++ b/src/app/componentes/admin/blog-admin/blog-admin.component.html
@@ -1,7 +1,15 @@
 <div class="space-y-6">
- @if(!editando && !agregando){
-    <button (click)="agregarBlog()" class= "btn-agregar bg-teal-400">Agregar nuevo post</button>
-  }
+  
+  @if(!editando && !agregando){
+    <div class="flex justify-center mt-6">
+  <button
+    (click)="agregarBlog()"
+    class="btn-agregar px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
+  >
+    Agregar nuevo post
+  </button>
+</div>
+}
     @if (mostrarFormularioBlog) {
     <form [formGroup]="blogForm" (ngSubmit)="agregarBlog()" class="space-y-6">
       
