--- a/src/app/componentes/admin/eventos-admin/eventos-admin.component.scss
+++ b/src/app/componentes/admin/eventos-admin/eventos-admin.component.scss
@@ -2,10 +2,6 @@ body {
     transition: background-color 0.3s, color 0.3s;
   }
 
-  body.dark {
-    background-color: #2d2d2d;
-    color: white;
-  }
 
   body.light {
     background-color: white;
@@ -13,19 +9,14 @@ body {
   }
 
   form {
-    background-color: white;
-    color: black;
     padding: 1.5rem;
     border-radius: 0.5rem;
     max-width: 40rem;
     margin: 0 auto;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  body.dark .form {
-    background-color: #333333;
-    color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    background-color: white;
+    color: black;
+    transition: background-color 0.3s, color 0.3s;
   }
 
   input, select {
@@ -38,19 +29,7 @@ body {
     margin-top: 0.5rem;
     margin-bottom: 1rem;
   }
-  body.dark .input, select {
-    background-color: #333333;
-    color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  }
-  .btn-agregar {
-    color: white;
-    padding: 0.75rem 1.5rem;
-    border-radius: 0.375rem;
-    cursor: pointer;
-    font-size: 1rem;
-    transition: background-color 0.3s ease;
-  }
+
   .btn-eventos {
     padding: 0.75rem 1.5rem;
     border-radius: 0.375rem;
@@ -78,12 +57,7 @@ body {
     margin: 10px 0;
     transition: background-color 0.3s, box-shadow 0.3s;
   }
-  
-  body.dark .card {
-    background-color: #333333;
-    color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-  }
+
   
   .card button {
     padding: 0.5rem 1rem;
