--- a/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
+++ b/src/app/componentes/admin/graficos-admin/graficos-admin.component.html
@@ -1,1 +1,9 @@
-<p>graficos-admin works!</p>
+<div style="display: block;">
+    <canvas baseChart
+            [datasets]="barChartData"
+            [labels]="barChartLabels"
+            [options]="barChartOptions"
+            [legend]="barChartLegend"
+            [chartType]="barChartType">
+    </canvas>
+  </div>
