--- a/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
+++ b/src/app/componentes/admin/negocios-admin/negocios-admin.component.html
@@ -1,9 +1,16 @@
 <div class="space-y-6">
   @if(!editando && !agregando){
-  <button (click)="agregarNegocio()" class="btn-agregar bg-teal-400">
+    <div class="flex justify-center mt-6">
+  <button
+    (click)="agregarNegocio()"
+    class="btn-agregar px-6 py-3 bg-teal-400 text-white text-lg font-semibold rounded-full shadow-md hover:bg-teal-500 focus:ring-2 focus:ring-teal-500"
+  >
     Agregar nuevo negocio
   </button>
-  } @if (mostrarFormulario) {
+</div>
+}
+  
+  @if (mostrarFormulario) {
   <form
     [formGroup]="negocioForm"
     (ngSubmit)="agregarNegocio()"
