--- a/src/app/componentes/mapa/mapa.component.html
+++ b/src/app/componentes/mapa/mapa.component.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Negocios en el Mapa</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-  </head>
-  <body class="text-black min-h-screen flex items-center justify-center">    
-
+<div class="text-black min-h-screen flex items-center justify-center">
     <div class="container mx-auto p-6">
       <!-- Contenedor Principal -->
       <div class="flex flex-col gap-6 lg:flex-row shadow-lg rounded-lg overflow-hidden h-full">
@@ -102,6 +93,7 @@
   </div>
 </div>
 }
-  </body>
-</html>
+</div>
+<app-footer></app-footer>
+
 
